# ZenKnowledgeForge

./: .env.example  .gitignore  ANALYSIS_INDEX.md  COMPLETE_ERROR_REPORT.md  COMPLETION_REPORT.md  DEPLOYMENT_SUCCESS.md  ERRORS_LIST.md  ERROR_ANALYSIS.md  EXECUTION_REPORT.md  EXECUTION_REPORT_20260126.md  EXECUTION_STATUS.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_STATUS.md  OPTIMIZATIONS.md  PHASE_1_PROGRESS.md  PHASE_1_WEEK_2_COMPLETE.md  QUICK_REFERENCE.md  README.md  RESEARCH_GRADE_IMPLEMENTATION_PLAN.md  RUNNING.md  RUNNING_APPLICATION.md  SESSION_SUMMARY.md  STATUS.md  SYSTEM_ANALYSIS.md  TEST_RESULTS_AND_NEXT_STEPS.md  diagnosis_script.py  docker-compose.yml  full_debug_output.txt  pyproject.toml  run_output.txt  run_test.ps1  run_zen.py  test_evidence_retrieval.py  test_output.txt  test_retrieval_output.txt  test_run.txt  test_web_search.py
chroma_db/: chroma.sqlite3
config/: agents.yaml  hardware.yaml
config/prompts/: auditor.md  grounder.md  interpreter.md  judge.md  planner.md  visualizer.md
config/templates/: learning_path.md.j2  project_overview.md.j2  research_report.md.j2
docs/: DEVELOPMENT_PLAN.md  MODULE_SPECIFICATIONS.md  USER_GUIDE.md
scripts/: pull_models.ps1  pull_models.sh  start_services.ps1
src/: __init__.py  __main__.py
src/agents/: __init__.py  auditor.py  base_agent.py  grounder.py  interpreter.py  judge.py  planner.py  visualizer.py
src/cli/: __init__.py  interactive.py  model_selector.py  parser.py  progress.py
src/memory/: __init__.py
src/orchestration/: __init__.py  (+6 more)
test_chroma/: chroma.sqlite3
tests/: README.md
(+11 files in other folders)
