[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "zenknowledgeforge"
version = "0.1.0"
description = "Local-first deliberative multi-agent LLM system for knowledge synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZenKnowledgeForge Contributors"}
]
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "chromadb>=0.4.0",
    "neo4j>=5.15.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "asyncio>=3.4.3",
    "onnxruntime>=1.16.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "bibtexparser>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
zen = "zen.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
